--- a/BE/package.json
+++ b/BE/package.json
@@ -18,7 +18,8 @@
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "pdfkit-table": "^0.1.99"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
