--- a/BE/.env
+++ b/BE/.env
@@ -1,2 +1,5 @@
 JWT_SECRET="123456789123456789123456789123456789"
 JWT_EXPIRES=1h
+EMAIL_USER="tranthihieu321@gmail.com"
+EMAIL_PASS="vrtp agla qvii eaok"
+OTP_SECRET="123456789123456789123456789123456789"
