--- a/BE/package.json
+++ b/BE/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
-    "pdfkit-table": "^0.1.99"
+    "pdfkit-table": "^0.1.99",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
